@@ -16,6 +16,9 @@
    - jmc@cvs.openbsd.org 2005/01/08 00:41:19
      [sshd_config.5]
      `login'(n) -> `log in'(v);
+   - dtucker@cvs.openbsd.org 2005/01/17 03:25:46
+     [moduli.c]
+     Correct spelling: SCHNOOR->SCHNORR; ok djm@
 
 20050118
  - (dtucker) [INSTALL Makefile.in configure.ac survey.sh.in] Implement
@@ -1988,4 +1991,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3613 2005/01/20 00:01:46 dtucker Exp $
+$Id: ChangeLog,v 1.3614 2005/01/20 00:02:26 dtucker Exp $
